[tool.poetry]
name = "craterpy"
version = "0.9.1"
homepage = "https://github.com/cjtu/craterpy"
description = "Impact crater data science in Python."
authors = ["Christian J. Tai Udovicic <cj.taiudovicic@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cjtu/craterpy"
documentation = "https://readthedocs.org/projects/craterpy/"
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Programming Language :: Python :: 3.10',
]
keywords = [
    'python', 
    'crater',
    'data analysis',
    'planetary',
    'moon',
]
include = [
    "LICENSE.txt",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cjtu/craterpy/issues"

[tool.poetry.dependencies]
python = "^3.10,<4.0"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
rasterio = "^1.3.10"
cartopy = "^0.24.0"
rasterstats = "^0.20.0"
geopandas = "^1.0.1"
scipy = "^1.13.1"
antimeridian = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
jupyter = "^1.1.1"
black = "^25.1.0"
pytest-cov = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = "^1.0.0"
sphinx = "^6.2.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.10.3"

[tool.black]
line-length=79

[tool.pylint.reports]
output-format="colorized"
reports="y"
disable=["R0913","C0103","W0212","R0914","E1121","W0511","C0209"]
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=craterpy --cov-branch --cov-report term-missing  -v --color=yes"
python_files = "tests.py test_*.py *_tests.py"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:::antimeridian", 
    "ignore:::rasterstats"
]

[tool.coverage.run]
branch = true
omit = [
    "*/examples*",
    "*test*",
    "*setup.py",
    "*version.py",
    "*__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
