[project]
name = "craterpy"
version = "0.9.3"
description = "Impact crater data science in Python."
readme = "README.md"
authors = [
    {name = "Christian J. Tai Udovicic", email = "cj.taiudovicic@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "numpy<3.0.0,>=2.2.4",
    "matplotlib<4.0.0,>=3.10.1",
    "pandas<3.0.0,>=2.2.3",
    "rasterio<2.0.0,>=1.3.10",
    "cartopy<1.0.0,>=0.24.0",
    "rasterstats<1.0.0,>=0.20.0",
    "geopandas<2.0.0,>=1.0.1",
    "scipy<2.0.0,>=1.13.1",
    "antimeridian<1.0.0,>=0.4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "python",
    "crater",
    "data analysis",
    "planetary",
    "moon",
]

[project.urls]
"Bug Tracker" = "https://github.com/cjtu/craterpy/issues"
homepage = "https://github.com/cjtu/craterpy"
repository = "https://github.com/cjtu/craterpy"
documentation = "https://readthedocs.org/projects/craterpy/"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.5",
    "jupyter<2.0.0,>=1.1.1",
    "black<26.0.0,>=25.1.0",
    "pytest-cov<7.0.0,>=6.0.0",
]
docs = [
    "myst-parser<2.0.0,>=1.0.0",
    "sphinx<7.0.0,>=6.2.1",
    "sphinx-rtd-theme<3.0.0,>=2.0.0",
    "sphinx-autobuild<2025.0.0,>=2024.10.3",
]

[tool.black]
line-length=79


[tool.pytest.ini_options]
addopts = "--cov=craterpy --cov-branch --cov-report term-missing  -v --color=yes"
python_files = "tests.py test_*.py *_tests.py"
filterwarnings = [
    "ignore:.*shapely.*is deprecated:DeprecationWarning",
    "ignore::UserWarning",
    "ignore:::antimeridian", 
    "ignore:::rasterstats"
]

[tool.coverage.run]
branch = true
source = ["craterpy/craterpy"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
ignore_errors = true

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[tool.hatch.build.targets.sdist]
include-only = [
    "craterpy/*.py",
]
exclude = [
    "craterpy/data/_images/",
]

[tool.hatch.build.force-include]
"craterpy/data" = "craterpy/data"
